@@ -1,3 +1,9 @@
+2002-06-21  Terry Biggs <tbiggs@users.sourceforge.net>
+
+	* renamed gui/_gbs.h to gui/gbs.h
+	* renamed gnome/_gbs.c to gnome/gbs.c
+	
+
 2002-06-08  Victor Porton  <porton@localhost>
 
 	* fixed src/main/commentary.c: crashed displaying the commentary
